export const snapshot = {};

snapshot[`render order property 1`] = `24`;

snapshot[`render order property 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`render order property 3`] = `
[
]
`;

snapshot[`render order property 4`] = `
{
  content: "<!DOCTYPE html>
<p>Hello world</p>
",
  data: {
    children: true,
    content: "Hello world
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/extra-page/",
  },
  dest: {
    ext: ".html",
    path: "/extra-page/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/extra-page",
    remote: undefined,
    slug: "extra-page",
  },
}
`;

snapshot[`render order property 5`] = `
{
  content: "<!DOCTYPE html>
11",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/11/",
  },
  dest: {
    ext: ".html",
    path: "/articles/11/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages2[0]",
    remote: undefined,
    slug: "pages2",
  },
}
`;

snapshot[`render order property 6`] = `
{
  content: "<!DOCTYPE html>
12",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/12/",
  },
  dest: {
    ext: ".html",
    path: "/articles/12/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages2[1]",
    remote: undefined,
    slug: "pages2",
  },
}
`;

snapshot[`render order property 7`] = `
{
  content: "<!DOCTYPE html>
13",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/13/",
  },
  dest: {
    ext: ".html",
    path: "/articles/13/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages2[2]",
    remote: undefined,
    slug: "pages2",
  },
}
`;

snapshot[`render order property 8`] = `
{
  content: "<!DOCTYPE html>
14",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/14/",
  },
  dest: {
    ext: ".html",
    path: "/articles/14/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages2[3]",
    remote: undefined,
    slug: "pages2",
  },
}
`;

snapshot[`render order property 9`] = `
{
  content: "<!DOCTYPE html>
15",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/15/",
  },
  dest: {
    ext: ".html",
    path: "/articles/15/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages2[4]",
    remote: undefined,
    slug: "pages2",
  },
}
`;

snapshot[`render order property 10`] = `
{
  content: "<!DOCTYPE html>
16",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/16/",
  },
  dest: {
    ext: ".html",
    path: "/articles/16/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages2[5]",
    remote: undefined,
    slug: "pages2",
  },
}
`;

snapshot[`render order property 11`] = `
{
  content: "<!DOCTYPE html>
17",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/17/",
  },
  dest: {
    ext: ".html",
    path: "/articles/17/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages2[6]",
    remote: undefined,
    slug: "pages2",
  },
}
`;

snapshot[`render order property 12`] = `
{
  content: "<!DOCTYPE html>
18",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/18/",
  },
  dest: {
    ext: ".html",
    path: "/articles/18/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages2[7]",
    remote: undefined,
    slug: "pages2",
  },
}
`;

snapshot[`render order property 13`] = `
{
  content: "<!DOCTYPE html>
19",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/19/",
  },
  dest: {
    ext: ".html",
    path: "/articles/19/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages2[8]",
    remote: undefined,
    slug: "pages2",
  },
}
`;

snapshot[`render order property 14`] = `
{
  content: "<!DOCTYPE html>
20",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/20/",
  },
  dest: {
    ext: ".html",
    path: "/articles/20/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages2[9]",
    remote: undefined,
    slug: "pages2",
  },
}
`;

snapshot[`render order property 15`] = `
{
  content: "<!DOCTYPE html>
1",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/1/",
  },
  dest: {
    ext: ".html",
    path: "/articles/1/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages[0]",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`render order property 16`] = `
{
  content: "<!DOCTYPE html>
2",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/2/",
  },
  dest: {
    ext: ".html",
    path: "/articles/2/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages[1]",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`render order property 17`] = `
{
  content: "<!DOCTYPE html>
3",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/3/",
  },
  dest: {
    ext: ".html",
    path: "/articles/3/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages[2]",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`render order property 18`] = `
{
  content: "<!DOCTYPE html>
4",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/4/",
  },
  dest: {
    ext: ".html",
    path: "/articles/4/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages[3]",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`render order property 19`] = `
{
  content: "<!DOCTYPE html>
5",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/5/",
  },
  dest: {
    ext: ".html",
    path: "/articles/5/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages[4]",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`render order property 20`] = `
{
  content: "<!DOCTYPE html>
6",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/6/",
  },
  dest: {
    ext: ".html",
    path: "/articles/6/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages[5]",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`render order property 21`] = `
{
  content: "<!DOCTYPE html>
7",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/7/",
  },
  dest: {
    ext: ".html",
    path: "/articles/7/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages[6]",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`render order property 22`] = `
{
  content: "<!DOCTYPE html>
8",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/8/",
  },
  dest: {
    ext: ".html",
    path: "/articles/8/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages[7]",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`render order property 23`] = `
{
  content: "<!DOCTYPE html>
9",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/9/",
  },
  dest: {
    ext: ".html",
    path: "/articles/9/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages[8]",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`render order property 24`] = `
{
  content: "<!DOCTYPE html>
10",
  data: {
    children: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/10/",
  },
  dest: {
    ext: ".html",
    path: "/articles/10/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages[9]",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`render order property 25`] = `
{
  content: '<!DOCTYPE html>
{"page":1,"totalPages":3,"totalResults":11,"previous":null,"next":"./page-2/index.html"}',
  data: {
    children: false,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    layout: "paginate.tmpl.js",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    pagination: {
      next: "./page-2/index.html",
      page: 1,
      previous: null,
      totalPages: 3,
      totalResults: 11,
    },
    renderOrder: 1,
    results: 5,
    search: Search {},
    tags: [
    ],
    url: "/page-1/",
  },
  dest: {
    ext: ".html",
    path: "/page-1/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pagination[0]",
    remote: undefined,
    slug: "pagination",
  },
}
`;

snapshot[`render order property 26`] = `
{
  content: '<!DOCTYPE html>
{"page":2,"totalPages":3,"totalResults":11,"previous":"./page-1/index.html","next":"./page-3/index.html"}',
  data: {
    children: false,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    layout: "paginate.tmpl.js",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    pagination: {
      next: "./page-3/index.html",
      page: 2,
      previous: "./page-1/index.html",
      totalPages: 3,
      totalResults: 11,
    },
    renderOrder: 1,
    results: 5,
    search: Search {},
    tags: [
    ],
    url: "/page-2/",
  },
  dest: {
    ext: ".html",
    path: "/page-2/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pagination[1]",
    remote: undefined,
    slug: "pagination",
  },
}
`;

snapshot[`render order property 27`] = `
{
  content: '<!DOCTYPE html>
{"page":3,"totalPages":3,"totalResults":11,"previous":"./page-2/index.html","next":null}',
  data: {
    children: false,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    layout: "paginate.tmpl.js",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    pagination: {
      next: null,
      page: 3,
      previous: "./page-2/index.html",
      totalPages: 3,
      totalResults: 11,
    },
    renderOrder: 1,
    results: 1,
    search: Search {},
    tags: [
    ],
    url: "/page-3/",
  },
  dest: {
    ext: ".html",
    path: "/page-3/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pagination[2]",
    remote: undefined,
    slug: "pagination",
  },
}
`;
